@@ -41,6 +41,7 @@
 - Fix: [#17703] (undefined string) when building on invalid height.
 - Fix: [#17776] “Other Parks” tab uses separate lists for SC4/SC6 and .park scenarios.
 - Fix: [#17784] Colour preset RNG is biased (original bug).
+- Fix: [#17788] Guests could leave queue if another guest rejoins it from the entrance building.
 - Fix: [#17834] Finance window becomes blank after 4096 years.
 - Fix: [#17905] The chain button in the map window is enabled for rectangular maps when (re)opened.
 
